--- a/package.json
+++ b/package.json
@@ -17,17 +17,26 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "body-parser": "^1.20.2",
-    "mongoose": "^7.5.2",
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "csv-writer": "^1.6.0",
+    "date-fns": "^4.1.0",
+    "exceljs": "^4.4.0",
+    "express": "^4.18.2",
+    "express-validator": "^7.3.1",
     "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.1"
+    "mongoose": "^7.5.2",
+    "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.16.0",
+    "qrcode": "^1.5.4",
+    "sequelize": "^6.37.7",
+    "winston": "^3.19.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
+    "eslint": "^8.49.0",
     "jest": "^29.7.0",
-    "eslint": "^8.49.0"
+    "nodemon": "^3.0.1",
+    "supertest": "^7.1.4"
   }
 }
