--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.18.2",
     "express-validator": "^7.3.1",
     "jsonwebtoken": "^9.0.2",
+    "jsqr": "^1.4.0",
     "mongoose": "^7.5.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.16.0",
